--- a/index.html
+++ b/index.html
@@ -191,8 +191,8 @@ _________________________________________ -->
 
     <div class="container" align="center">  
         <div class="headline" align="center">
-        <p><span>Outside</span></p>
-        <h2>Data Analysis</h2>
+        <p><span>Data Analysis</span></p>
+        <h2>Projects</h2>
         </div>
     </div>
     
