--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ _________________________________________ -->
 <section class="u-full-width" id="education"> 
     <div class="container" align="center">  
         <div class="headline" align="center">
-            <p><span>Learning &amp; Training</span></p>
+            <p><span>Learning and Training</span></p>
             <h2>Education</h2>
         </div>
     </div>
@@ -157,7 +157,7 @@ _________________________________________ -->
     <div class="container" align="center">  
         <div class="headline" align="center">
             <p><span>Recognition</span></p>
-            <h2>Honours &amp; Awards</h2>
+            <h2>Honours and Awards</h2>
         </div>
     </div>
     
