--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ layout: default
                     <strong>Profile </strong> <a href="{{ profile.linkedin }}"></a>
                     <!--<li><strong>Skills </strong> <a href="{{ profile.linkedin }}">Profile</a></li> -->
                     <strong>Awards </strong> <a href="{{ profile.github }}"></a>
-                    <strong>Publications </strong> <a href="{{ profile.github }}">/a><
+                    <strong>Publications </strong> <a href="{{ profile.github }}"></a>
                 </ul>
             </div>           
     </div>
