--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ layout: default
                     <!--<li><strong>Skills </strong> <a href="{{ profile.linkedin }}">Profile</a></li>
                     <strong>Awards </strong> <a href="{{ profile.github }}"></a>
                     <strong>Publications </strong> <a href="{{ profile.github }}"></a> -->
-                profile: [Profile](#profile)
-                education: [Education](#education)
-                experience: [Experience](#experience)
-                projects: [Projects](#projects)
-                skills: [Skills](#skills)
-                awards: [Awards](#awards)
-                publications: [Publications](#publications)
+                [Profile](#profile)
+                [Education](#education)
+                [Experience](#experience)
+                [Projects](#projects)
+                [Skills](#skills)
+                [Awards](#awards)
+                [Publications](#publications)
                         
             </div>           
     </div>
