--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@ layout: default
                     <!--<li><strong>Skills </strong> <a href="{{ profile.linkedin }}">Profile</a></li>
                     <strong>Awards </strong> <a href="{{ profile.github }}"></a>
                     <strong>Publications </strong> <a href="{{ profile.github }}"></a> -->
-                [Profile](#profile)
-                [Education](#education)
+                <a href="{{#profile}}"Profile></a>
+                <!-- [Education](#education)
                 [Experience](#experience)
                 [Projects](#projects)
                 [Skills](#skills)
                 [Awards](#awards)
-                [Publications](#publications)
+                [Publications](#publications) -->
                         
             </div>           
     </div>
