--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
                     <!--<li><strong>Skills </strong> <a href="{{ profile.linkedin }}">Profile</a></li>
                     <strong>Awards </strong> <a href="{{ profile.github }}"></a>
                     <strong>Publications </strong> <a href="{{ profile.github }}"></a> -->
-                <a href="#profile">Profile></a>
+                [jump](#profile)
                 <!-- [Education](#education)
                 [Experience](#experience)
                 [Projects](#projects)
@@ -32,7 +32,7 @@ layout: default
 ____________________________________________
 _________________________________________ -->
 
-<div class="container">
+<div id = "profile" class="container">
 {% for profile in site.profile %}
         <div class="row">
             <div class="five columns" align="left">
