--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ layout: default
                     <!--<li><strong>Skills </strong> <a href="{{ profile.linkedin }}">Profile</a></li>
                     <strong>Awards </strong> <a href="{{ profile.github }}"></a>
                     <strong>Publications </strong> <a href="{{ profile.github }}"></a> -->
-                [jump](#profile)
+                <a href="#profile">Profile></a>
                 <!-- [Education](#education)
                 [Experience](#experience)
                 [Projects](#projects)
