--- a/index.html
+++ b/index.html
@@ -16,7 +16,13 @@ layout: default
                     <!--<li><strong>Skills </strong> <a href="{{ profile.linkedin }}">Profile</a></li>
                     <strong>Awards </strong> <a href="{{ profile.github }}"></a>
                     <strong>Publications </strong> <a href="{{ profile.github }}"></a> -->
-                <a href="#profile">Profile></a>
+                <a href="#profile">Profile</a>
+                <a href="#educatione">Education</a>
+                <a href="#experience">Experience</a>
+                <a href="#projects">Projects</a>
+                <a href="#skills">Skills</a>
+                <a href="#awards">Awards</a>
+                <a href="#publications">Publications</a>                    
                 <!-- [Education](#education)
                 [Experience](#experience)
                 [Projects](#projects)
