--- a/index.html
+++ b/index.html
@@ -6,29 +6,15 @@ layout: default
         <div class="row">
             <div class="seven columns" align="center">
 
-<!-- Each of these refers to the YAML frontend of the profile.md file. You can create your own or edit these to suit -->
-
-                    <!-- <strong>Profile </strong>{{ navigate.profile }}
-                    <strong>Education </strong>{{ navigate.education }}
-                    <strong>Experience </strong>{{ navigate.experience }}
-                    <strong>Skills </strong> <a href="{{ # }}"></a>
-                    <strong>Projects </strong> <a href="{{ profile.linkedin }}"></a>
-                    <!--<li><strong>Skills </strong> <a href="{{ profile.linkedin }}">Profile</a></li>
-                    <strong>Awards </strong> <a href="{{ profile.github }}"></a>
-                    <strong>Publications </strong> <a href="{{ profile.github }}"></a> -->
-                <a href="#profile">Profile</a>
-                <a href="#educatione">Education</a>
-                <a href="#experience">Experience</a>
-                <a href="#projects">Projects</a>
-                <a href="#skills">Skills</a>
-                <a href="#awards">Awards</a>
-                <a href="#publications">Publications</a>                    
-                <!-- [Education](#education)
-                [Experience](#experience)
-                [Projects](#projects)
-                [Skills](#skills)
-                [Awards](#awards)
-                [Publications](#publications) -->
+                | Quick References |
+                    ---  
+                | <a href="#profile">Profile</a> |
+                | <a href="#education">Education</a> |
+                | <a href="#experience">Experience</a> |
+                | <a href="#projects">Projects</a> |
+                | <a href="#skills">Skills</a> |
+                | <a href="#awards">Awards</a> |
+                | <a href="#publications">Publications</a> |                   
                         
             </div>           
     </div>
