--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ layout: default
 
 <div class="container">
         <div class="row">
-            <div class="seven columns" align="center">
+            <div class="twelve columns" align="center">
 
-                | Quick References |
-                | --- |  
+                |  | Quick References |  |
+                | --- |  --- | --- |
                 | <a href="#profile">Profile</a> |
                 | <a href="#education">Education</a> |
                 | <a href="#experience">Experience</a> |
