--- a/index.html
+++ b/index.html
@@ -2,16 +2,23 @@
 layout: default
 ---
 
+<div class="container">
+        <div class="row">
+            <div class="twelve columns" align="center">
 
-                |  | Quick References |  |  
-                | ----- |  ----- | ----- |  
-                | <a href="#profile">Profile</a> |  
-                | <a href="#education">Education</a> |  
-                | <a href="#experience">Experience</a> |  
-                | <a href="#projects">Projects</a> |  
-                | <a href="#skills">Skills</a> |  
-                | <a href="#awards">Awards</a> |  
-                | <a href="#publications">Publications</a> |                     
+                |  Quick References |
+                | ----- |  ----- | ----- | ----- | ----- | ----- | ----- |
+                | <a href="#profile">Profile</a> |
+                | <a href="#education">Education</a> |
+                | <a href="#experience">Experience</a> |
+                | <a href="#projects">Projects</a> |
+                | <a href="#skills">Skills</a> |
+                | <a href="#awards">Awards</a> |
+                | <a href="#publications">Publications</a> |                   
+                        
+            </div>           
+    </div>
+</div>                         
 
 <!-- Profile Section 
 ____________________________________________
