--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@ layout: default
         <div class="row">
             <div class="twelve columns" align="center">
 
-                |  Quick References |
+                <!-- |  Quick References |
                 | ----- |  ----- | ----- | ----- | ----- | ----- | ----- |
                 | <a href="#profile">Profile</a> |
                 | <a href="#education">Education</a> |
@@ -14,7 +14,11 @@ layout: default
                 | <a href="#projects">Projects</a> |
                 | <a href="#skills">Skills</a> |
                 | <a href="#awards">Awards</a> |
-                | <a href="#publications">Publications</a> |                   
+                | <a href="#publications">Publications</a> |  -->
+                <table>
+                        <tr>
+                                <td> <a href="#profile">Profile</a> </td>
+                       
                         
             </div>           
     </div>
