--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@ layout: default
                 | <a href="#publications">Publications</a> |  -->
                 <table>
                         <tr>
-                                <td> <a href="#profile">Profile</a> </td>
-                       
-                        
+                                <td> <a href="#profile">Profile</a> </td>+
+                        </tr>
+               </table>                        
             </div>           
     </div>
 </div>                         
