Add html section references to page header

--- a/index.html
+++ b/index.html
@@ -5,19 +5,15 @@ layout: default
 <div class="container">
         <div class="row">
             <div class="twelve columns" align="center">
-
-                <!-- |  Quick References |
-                | ----- |  ----- | ----- | ----- | ----- | ----- | ----- |
-                | <a href="#profile">Profile</a> |
-                | <a href="#education">Education</a> |
-                | <a href="#experience">Experience</a> |
-                | <a href="#projects">Projects</a> |
-                | <a href="#skills">Skills</a> |
-                | <a href="#awards">Awards</a> |
-                | <a href="#publications">Publications</a> |  -->
                 <table>
                         <tr>
-                                <td> <a href="#profile">Profile</a> </td>+
+                                <td> <a href="#profile">Profile</a> </td>
+                                <td> <a href="#education">Education</a> </td>
+                                <td> <a href="#experience">Experience</a> </td>
+                                <td> <a href="#projects">Projects</a> </td>
+                                <td> <a href="#skills">Skills</a> </td>
+                                <td> <a href="#awards">Awards</a> </td>
+                                <td> <a href="#publications">Publications</a> </td>                               
                         </tr>
                </table>                        
             </div>           
