--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ _________________________________________ -->
         <div class="headline" align="center">
         <p><span>Data Analysis</span></p>
         <h2>Projects</h2>
-        </div>1
+        </div>
     </div>
     
     <div class="container">
